@@ -114,6 +114,9 @@
 <MODE NAME="coldfusion"		FILE="coldfusion.xml"
 				FILE_NAME_GLOB="*.{cfm,dbm,cfc}" />
 
+<MODE NAME='CPlex LP (Linear Program)'  FILE='cplexlp.xml'
+					FILE_NAME_GLOB='*.lp'  />
+
 <MODE NAME="c++"		FILE="cplusplus.xml"
 				FILE_NAME_GLOB="*.{cc,cpp,h,hh,hpp,cxx}" />
 
